--- a/libs/checkpoint-postgres/pyproject.toml
+++ b/libs/checkpoint-postgres/pyproject.toml
@@ -14,8 +14,15 @@ license-files = ['LICENSE']
 dependencies = [
   "langgraph-checkpoint>=2.1.2,<4.0.0",
   "orjson>=3.10.1",
+]
+
+[project.optional-dependencies]
+psycopg = [
   "psycopg>=3.2.0",
   "psycopg-pool>=3.2.0",
+]
+asyncpg = [
+  "asyncpg>=0.29.0",
 ]
 
 [project.urls]
@@ -31,6 +38,7 @@ test = [
   "pytest-asyncio",
   "pytest-mock",
   "psycopg[binary]",
+  "asyncpg",
   "langgraph-checkpoint",
   "pytest-watcher",
 ]
